--- a/build
+++ b/build
@@ -3,8 +3,8 @@
 set -e -x
 
 # Kernel Source
-KERNEL_SOURCE="https://github.com/cd-Crypton/android_kernel_realme_sm6225"
-KERNEL_BRANCH="android13-staging"
+KERNEL_SOURCE="https://github.com/myuniversal3830/kernel-a21s-4.19.git" 
+KERNEL_BRANCH="android-staging"
 KERNEL_DEFCONFIG="vendor/bengal-perf_defconfig"
 
 # Prebuilt Clang Toolchain (AOSP)
