--- a/build
+++ b/build
@@ -3,9 +3,9 @@
 set -e -x
 
 # Kernel Source
-KERNEL_SOURCE="https://github.com/myuniversal3830/kernel-a21s-4.19.git" 
+KERNEL_SOURCE="https://github.com/myuniversal3830/kernel-a21s-4.19" 
 KERNEL_BRANCH="android-staging"
-KERNEL_DEFCONFIG="vendor/bengal-perf_defconfig"
+KERNEL_DEFCONFIG="cuttlefish_defconfig"
 
 # Prebuilt Clang Toolchain (AOSP)
 CLANG_URL="https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/master-kernel-build-2021/clang-r416183b.tar.gz"
