--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -6,7 +6,7 @@ on:
       DEVICE_NAME:
         description: 'Your device codename.'
         required: true
-        default: ''
+        default: 'mido'
       ANDROID_VERSION:
         description: 'Your android version.'
         required: true
