--- a/build
+++ b/build
@@ -3,8 +3,8 @@
 set -e -x
 
 # Kernel Source
-KERNEL_SOURCE="https://github.com/carlodandan/android_kernel_realme_sm7125"
-KERNEL_BRANCH="A13"
+KERNEL_SOURCE="https://github.com/malkist01/N4X.git"
+KERNEL_BRANCH="normal"
 KERNEL_DEFCONFIG="vendor/atoll-perf_defconfig"
 
 # Prebuilt Clang Toolchain (AOSP)
