--- a/build
+++ b/build
@@ -5,7 +5,7 @@ set -e -x
 # Kernel Source
 KERNEL_SOURCE="https://github.com/malkist01/N4X.git"
 KERNEL_BRANCH="normal"
-KERNEL_DEFCONFIG="vendor/atoll-perf_defconfig"
+KERNEL_DEFCONFIG="teletubies_defconfig"
 
 # Prebuilt Clang Toolchain (AOSP)
 CLANG_URL="https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/master-kernel-build-2021/clang-r416183b.tar.gz"
