--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -36,14 +36,14 @@ jobs:
 
     - name: Compressed as Archive
       run: |
-        cd /home/runner/work/myKernel/out/arch/arm64/boot || exit 1
+        cd /home/runner/work/myKernel/out/arch/arm64/boot/Image.gz-dtb || exit 1
         zip -r9 "${{ github.event.inputs.DEVICE_NAME }}-${{ steps.props.outputs.date }}.zip" ./* -x "dts" -x "dts/*"
 
     - name: Release
       uses: ncipollo/release-action@v1.12.0
       with:
         artifacts: |
-          /home/runner/work/myKernel/out/arch/arm64/boot/*.zip
+          /home/runner/work/myKernel/out/arch/arm64/boot/Image.gz-dtb.zip
           /home/runner/work/myKernel/build.log
         name: Compiled Kernel for ${{ github.event.inputs.DEVICE_NAME }} - ${{ steps.props.outputs.date }}
         draft: false
